--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>louby 30</title>
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <!-- Place favicon.ico in the root directory -->
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -14,15 +14,32 @@
     <script src="scripts/modernizr.js"></script>
     <!-- endbuild -->
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-look-at-component@0.8.x/dist/aframe-look-at-component.min.js"></script>
+
+
   </head>
   <body>
 
     <a-scene>
       <a-assets>
-        <video id="hbd-video" muted autoplay loop="true" src="/images/hbd-video.mp4"></video>
+        <video id="rosieVideo" preload src="/images/rosie.mp4"></video>
+        <video id="maeveVideo" preload src="/images/maeve.mp4"></video>
+
       </a-assets>
 
-      <a-video src="#hbd-video" width="9" height="16" position="0 0 -20"></a-video>
+  <a-camera id="camera">
+    <a-entity
+          cursor="fuse: true; fuseTimeout: 100"
+          position="0 0 -1"
+          geometry="primitive: ring; radiusInner: 0.015; radiusOuter: 0.02"
+          material="color: black; shader: flat">
+</a-entity>
+  </a-camera>
+
+
+      <a-video id="rosie" src="#rosieVideo" width="9" height="16" position="-10 0 -20" look-at="#camera"></a-video>
+      <a-video id="maeve" src="#maeveVideo" width="9" height="16" position="10 0 -20" look-at="#camera"></a-video>
+
 
     </a-scene>
 
