--- a/app/index.html
+++ b/app/index.html
@@ -15,33 +15,28 @@
     <!-- endbuild -->
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-look-at-component@0.8.x/dist/aframe-look-at-component.min.js"></script>
-
-
   </head>
   <body>
 
   <a-scene vr-mode-ui="enabled: false">
-      <a-assets>
-        <video id="rosieVideo" preload playsinline muted src="/images/rosie.mp4"></video>
-        <video id="maeveVideo" preload playsinline muted src="/images/maeve.mp4"></video>
-      </a-assets>
+    <a-assets>
+      <video id="rosieVideo" preload playsinline src="/images/rosie.mp4"></video>
+      <video id="maeveVideo" preload playsinline src="/images/maeve.mp4"></video>
+    </a-assets>
 
-  <a-camera id="camera">
-    <a-entity
-          cursor="fuse: true; fuseTimeout: 100"
-          position="0 0 -1"
-          geometry="primitive: ring; radiusInner: 0.015; radiusOuter: 0.02"
-          material="color: black; shader: flat">
-</a-entity>
-  </a-camera>
+    <a-camera id="camera" rotation-reader>
+      <a-entity
+            cursor="fuse: true; fuseTimeout: 1000;"
+            position="0 0 -1"
+            geometry="primitive: ring; radiusInner: 0.015; radiusOuter: 0.02"
+            material="color: black; shader: flat">
+      </a-entity>
+    </a-camera>
 
-
-      <a-video id="rosie" src="#rosieVideo" width="9" height="16" position="-10 0 -20" look-at="#camera"></a-video>
-      <a-video id="maeve" src="#maeveVideo" width="9" height="16" position="10 0 -20" look-at="#camera"></a-video>
-
+    <a-video id="rosie" src="#rosieVideo" width="9" height="16" position="-10 -5 -20" look-at="#camera"></a-video>
+    <a-video id="maeve" src="#maeveVideo" width="9" height="16" position="10 -5 -20" look-at="#camera"></a-video>
 
     </a-scene>
-
     <!-- build:js scripts/vendor.js -->
     <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
     <!-- endbuild -->
