--- a/app/index.html
+++ b/app/index.html
@@ -20,8 +20,10 @@
 
   <a-scene vr-mode-ui="enabled: false">
     <a-assets>
-      <video id="rosieVideo" preload playsinline src="/images/rosie.mp4"></video>
-      <video id="maeveVideo" preload playsinline src="/images/maeve.mp4"></video>
+      <video id="rosieVideo" preload playsinline src="/images/rosie.mp4" type="video/mp4"></video>
+      <video id="maeveVideo" preload playsinline src="/images/maeve.mp4" type="video/mp4"></video>
+      <video id="emilyVideo" preload playsinline src="/images/emily.mp4" type="video/mp4"></video>
+
     </a-assets>
 
     <a-camera id="camera" rotation-reader>
@@ -33,8 +35,10 @@
       </a-entity>
     </a-camera>
 
-    <a-video id="rosie" src="#rosieVideo" width="9" height="16" position="-10 -5 -20" look-at="#camera"></a-video>
-    <a-video id="maeve" src="#maeveVideo" width="9" height="16" position="10 -5 -20" look-at="#camera"></a-video>
+    <a-video id="rosie" src="#rosieVideo" width="9" height="16" position="-10 0 -20" look-at="#camera"></a-video>
+    <a-video id="maeve" src="#maeveVideo" width="9" height="16" position="10 0 -20" look-at="#camera"></a-video>
+    <a-video id="emily" src="#emilyVideo" width="9" height="16" position="0 15 -20" look-at="#camera"></a-video>
+
 
     </a-scene>
     <!-- build:js scripts/vendor.js -->
