Update how the video is triggered

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,10 @@
     <script src="https://unpkg.com/aframe-look-at-component@0.8.x/dist/aframe-look-at-component.min.js"></script>
   </head>
   <body>
+  
+  <button id="test-button" class="test-button">
+    click to tell the browser that we are ok with playing some video content on this site
+  </button>
 
   <a-scene vr-mode-ui="enabled: false">
     <a-assets>
