--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>louby 30</title>
+    <meta name="description" content="Happy Birthday Louise! Sorry you're not able to spend your Birthday surrounded by everyone that loves you, but hopfully this is one way to try and bring those people a little closer to you -Let the party commence! 🎉">
+
+    <title>Happy Birthday Louise!</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!-- build:css styles/main.css -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
