added lou vids x11 vids in total

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
       <button id="test-button" class="test-button">Let the party commence! 🎉</button>
       </main>
     <footer>
-      <p>Made with ❤️</br>by Jack William Merrell</p>
+      <p>Made with ❤️<br>by Jack William Merrell</p>
     </footer>
   </div>
 
@@ -39,6 +39,15 @@
       <video id="rosieVideo" preload playsinline src="/images/rosie.mp4" type="video/mp4"></video>
       <video id="maeveVideo" preload playsinline src="/images/maeve.mp4" type="video/mp4"></video>
       <video id="emilyVideo" preload playsinline src="/images/emily.mp4" type="video/mp4"></video>
+      <video id="markVideo" preload playsinline src="/images/mark.mp4" type="video/mp4"></video>
+      <video id="nickVideo" preload playsinline src="/images/nick.mp4" type="video/mp4"></video>
+      <video id="adamVideo" preload playsinline src="/images/adam.mp4" type="video/mp4"></video>
+
+      <video id="lou00Video" preload playsinline src="/images/lou00.mp4" type="video/mp4"></video>
+      <video id="lou02Video" preload playsinline src="/images/lou02.mp4" type="video/mp4"></video>
+      <video id="lou03Video" preload playsinline src="/images/lou03.mp4" type="video/mp4"></video>
+      <video id="lou09Video" preload playsinline src="/images/lou09.mp4" type="video/mp4"></video>
+      <video id="lou10Video" preload playsinline src="/images/lou10.mp4" type="video/mp4"></video>
 
     </a-assets>
 
@@ -55,8 +64,21 @@
 
 
     <a-video id="rosie" src="#rosieVideo" width="9" height="16" position="-10 5 -20" look-at="#camera"></a-video>
-    <a-video id="maeve" src="#maeveVideo" width="9" height="16" position="10 5 -20" look-at="#camera"></a-video>
+    <a-video id="maeve" src="#maeveVideo" width="9" height="16" position="20 5 5" look-at="#camera"></a-video>
     <a-video id="emily" src="#emilyVideo" width="9" height="16" position="-20 -5 -10" look-at="#camera"></a-video>
+    <a-video id="mark" src="#markVideo" width="9" height="9" position="20 15 -20" look-at="#camera"></a-video>
+    <a-video id="nick" src="#nickVideo" width="16" height="9" position="5 10 10" look-at="#camera"></a-video>
+    <a-video id="adam" src="#adamVideo" width="9" height="16" position="-10 15 15" look-at="#camera"></a-video>
+
+    <a-video id="lou00" src="#lou00Video" width="9" height="16" position="10 0 -20" look-at="#camera"></a-video>
+    <a-video id="lou02" src="#lou02Video" width="9" height="16" position="10 -10 15" look-at="#camera"></a-video>
+    <a-video id="lou03" src="#lou03Video" width="9" height="16" position="0 0 20" look-at="#camera"></a-video>
+    <a-video id="lou09" src="#lou09Video" width="16" height="9" position="20 -15 5" look-at="#camera"></a-video>
+    <a-video id="lou10" src="#lou10Video" width="16" height="9" position="-25 15 -5" look-at="#camera"></a-video>
+
+
+
+
 
 
     </a-scene>
