added wasd acceleration

--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
 
     </a-assets>
 
-    <a-camera id="camera" rotation-reader>
+    <a-camera id="camera" look-controls wasd-controls="acceleration:500" rotation-reader>
       <a-entity
             cursor="fuse: true; fuseTimeout: 1000;"
             position="0 0 -1"
