--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
       <video id="katyVideo" preload playsinline src="/images/katy.mp4" type="video/mp4"></video>
       <video id="lucyVideo" preload playsinline src="/images/lucy.mp4" type="video/mp4"></video>
       <video id="tommyVideo" preload playsinline src="/images/tommy.mp4" type="video/mp4"></video>
+      <video id="katieVideo" preload playsinline src="/images/katie.mp4" type="video/mp4"></video>
 
       <!-- lou -->
       <video id="lou00Video" preload playsinline poster="/images/jack.jpg" src="/images/lou00.mp4" type="video/mp4"></video>
@@ -108,6 +109,8 @@
     <a-video id="katy" src="#katyVideo" width="9" height="16" position="30 20 15" look-at="#camera"></a-video>
     <a-video id="lucy" src="#lucyVideo" width="16" height="9" position="15 0 20" look-at="#camera"></a-video>
     <a-video id="tommy" src="#tommyVideo" width="9" height="16" position="-10 -15 15" look-at="#camera"></a-video>
+    <a-video id="katie" src="#katieVideo" width="9" height="9" position="20 10 20" look-at="#camera"></a-video>
+
 
 
     <!-- lou -->
