--- a/app/index.html
+++ b/app/index.html
@@ -124,7 +124,7 @@
 
     </a-scene>
     <!-- build:js scripts/vendor.js -->
-    <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <!-- <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script> -->
     <!-- endbuild -->
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
