--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,8 @@
       <video id="lucyVideo" preload playsinline src="/images/lucy.mp4" type="video/mp4"></video>
       <video id="tommyVideo" preload playsinline src="/images/tommy.mp4" type="video/mp4"></video>
       <video id="katieVideo" preload playsinline src="/images/katie.mp4" type="video/mp4"></video>
+      <video id="evesVideo" preload playsinline src="/images/eves.mp4" type="video/mp4"></video>
+
 
       <!-- lou -->
       <video id="lou00Video" preload playsinline poster="/images/jack.jpg" src="/images/lou00.mp4" type="video/mp4"></video>
@@ -110,6 +112,8 @@
     <a-video id="lucy" src="#lucyVideo" width="16" height="9" position="15 0 20" look-at="#camera"></a-video>
     <a-video id="tommy" src="#tommyVideo" width="9" height="16" position="-10 -15 15" look-at="#camera"></a-video>
     <a-video id="katie" src="#katieVideo" width="9" height="9" position="20 10 20" look-at="#camera"></a-video>
+    <a-video id="eves" src="#evesVideo" width="16" height="9" position="-20 -12 0" look-at="#camera"></a-video>
+
 
 
 
