--- a/app/index.html
+++ b/app/index.html
@@ -66,13 +66,24 @@
       <video id="katieVideo" preload playsinline src="/images/katie.mp4" type="video/mp4"></video>
       <video id="evesVideo" preload playsinline src="/images/eves.mp4" type="video/mp4"></video>
 
+      <video id="emmaVideo" preload playsinline src="/images/emma.mp4" type="video/mp4"></video>
+      <video id="georgeVideo" preload playsinline src="/images/george.mp4" type="video/mp4"></video>
+      <video id="ksideVideo" preload playsinline src="/images/kside.mp4" type="video/mp4"></video>
+      <video id="kellyVideo" preload playsinline src="/images/kelly.mp4" type="video/mp4"></video>
+      <video id="maxVideo" preload playsinline src="/images/max.mp4" type="video/mp4"></video>
+      <video id="melVideo" preload playsinline src="/images/mel.mp4" type="video/mp4"></video>
+      <video id="pollyVideo" preload playsinline src="/images/polly.mp4" type="video/mp4"></video>
+      <video id="randcVideo" preload playsinline src="/images/randc.mp4" type="video/mp4"></video>
+      <video id="stephVideo" preload playsinline src="/images/steph.mp4" type="video/mp4"></video>
+
+
 
       <!-- lou -->
-      <video id="lou00Video" preload playsinline poster="/images/jack.jpg" src="/images/lou00.mp4" type="video/mp4"></video>
-      <video id="lou02Video" preload playsinline poster="/images/jack.jpg" src="/images/lou02.mp4" type="video/mp4"></video>
-      <video id="lou03Video" preload playsinline poster="/images/jack.jpg" src="/images/lou03.mp4" type="video/mp4"></video>
-      <video id="lou09Video" preload playsinline poster="/images/jack.jpg" src="/images/lou09.mp4" type="video/mp4"></video>
-      <video id="lou10Video" preload playsinline poster="/images/jack.jpg" src="/images/lou10.mp4" type="video/mp4"></video>
+      <video id="lou00Video" preload playsinline src="/images/lou00.mp4" type="video/mp4"></video>
+      <video id="lou02Video" preload playsinline src="/images/lou02.mp4" type="video/mp4"></video>
+      <video id="lou03Video" preload playsinline src="/images/lou03.mp4" type="video/mp4"></video>
+      <video id="lou09Video" preload playsinline src="/images/lou09.mp4" type="video/mp4"></video>
+      <video id="lou10Video" preload playsinline src="/images/lou10.mp4" type="video/mp4"></video>
 
     </a-assets>
 
@@ -80,49 +91,58 @@
     </a-camera>
 
     <a-camera id="videoCamera" active="false" look-controls wasd-controls="acceleration:500">
-      <a-entity id="cursor"
-            position="0 0 -1"
-            geometry="primitive: ring; radiusInner: 0.015; radiusOuter: 0.02"
-            material="color: #9D021A; shader: flat">
+      <a-entity id="cursor" position="0 0 -1" geometry="primitive: ring; radiusInner: 0.015; radiusOuter: 0.02" material="color: #9D021A; shader: flat">
       </a-entity>
     </a-camera>
 
-    <a-entity id="camera" rotation-reader></a-entity>
+    <a-entity id="camera" rotation-reader>
+    </a-entity>
 
     <a-entity id="videosContainer" animation="property: rotation; to: 360 360 360; loop: true; dur: 25000; easing: linear;">
 
-    <a-video id="jack" src="#jackVideo" width="9" height="16" position="-10 0 -20" look-at="#camera"></a-video>
-    <a-video id="dickie" src="#dickieVideo" width="9" height="16" position="-10 20 -10" look-at="#camera"></a-video>
-    <a-video id="rosie" src="#rosieVideo" width="9" height="16" position="-15 25 5" look-at="#camera"></a-video>
-    <a-video id="maeve" src="#maeveVideo" width="9" height="16" position="30 0 15" look-at="#camera"></a-video>
-    <a-video id="emily" src="#emilyVideo" width="9" height="16" position="-25 0 -10" look-at="#camera"></a-video>
-    <a-video id="mark" src="#markVideo" width="9" height="9" position="30 0 0" look-at="#camera"></a-video>
-    <a-video id="nick" src="#nickVideo" width="16" height="9" position="5 15 20" look-at="#camera"></a-video>
-    <a-video id="amy" src="#amyVideo" width="9" height="14" position="-25 10 10" look-at="#camera"></a-video>
-    <a-video id="josh" src="#joshVideo" width="12" height="8" position="20 15 -10" look-at="#camera"></a-video>
-    <a-video id="liam" src="#liamVideo" width="12" height="8" position="-10 0 20" look-at="#camera"></a-video>
-    <a-video id="loz" src="#lozVideo" width="9" height="16" position="-25 -5 15" look-at="#camera"></a-video>
-    <a-video id="tomb" src="#tombVideo" width="9" height="16" position="-30 0 0" look-at="#camera"></a-video>
-    <a-video id="adam" src="#adamVideo" width="9" height="16" position="-10 15 15" look-at="#camera"></a-video>
-    <a-video id="tomd" src="#tomdVideo" width="12" height="8" position="20 -15 -15" look-at="#camera"></a-video>
-    <a-video id="matt" src="#mattVideo" width="9" height="16" position="30 15 0" look-at="#camera"></a-video>
-    <a-video id="cat" src="#catVideo" width="9" height="9" position="0 3 30" look-at="#camera"></a-video>
-    <a-video id="izzie" src="#izzieVideo" width="9" height="16" position="20 0 -10" look-at="#camera"></a-video>
-    <a-video id="katy" src="#katyVideo" width="9" height="16" position="30 20 15" look-at="#camera"></a-video>
-    <a-video id="lucy" src="#lucyVideo" width="16" height="9" position="15 0 20" look-at="#camera"></a-video>
-    <a-video id="tommy" src="#tommyVideo" width="9" height="16" position="-10 -15 15" look-at="#camera"></a-video>
-    <a-video id="katie" src="#katieVideo" width="9" height="9" position="20 10 20" look-at="#camera"></a-video>
-    <a-video id="eves" src="#evesVideo" width="16" height="9" position="-20 -12 0" look-at="#camera"></a-video>
+      <a-video id="jack" src="#jackVideo" width="9" height="16" position="-10 0 -20" look-at="#camera"></a-video>
+      <a-video id="dickie" src="#dickieVideo" width="9" height="16" position="-10 20 -10" look-at="#camera"></a-video>
+      <a-video id="rosie" src="#rosieVideo" width="9" height="16" position="-15 25 5" look-at="#camera"></a-video>
+      <a-video id="maeve" src="#maeveVideo" width="9" height="16" position="30 2 15" look-at="#camera"></a-video>
+      <a-video id="emily" src="#emilyVideo" width="9" height="16" position="-25 0 -10" look-at="#camera"></a-video>
+      <a-video id="mark" src="#markVideo" width="9" height="9" position="28 0 4" look-at="#camera"></a-video>
+      <a-video id="nick" src="#nickVideo" width="16" height="9" position="5 15 30" look-at="#camera"></a-video>
+      <a-video id="amy" src="#amyVideo" width="9" height="14" position="-25 15 10" look-at="#camera"></a-video>
+      <a-video id="josh" src="#joshVideo" width="12" height="8" position="20 15 -10" look-at="#camera"></a-video>
+      <a-video id="liam" src="#liamVideo" width="12" height="8" position="-8 5 22" look-at="#camera"></a-video>
+      <a-video id="loz" src="#lozVideo" width="9" height="16" position="-25 -2 20" look-at="#camera"></a-video>
+      <a-video id="tomb" src="#tombVideo" width="9" height="16" position="-30 0 0" look-at="#camera"></a-video>
+      <a-video id="adam" src="#adamVideo" width="9" height="16" position="-8 20 22" look-at="#camera"></a-video>
+      <a-video id="tomd" src="#tomdVideo" width="12" height="8" position="20 -15 -15" look-at="#camera"></a-video>
+      <a-video id="matt" src="#mattVideo" width="9" height="16" position="30 15 2" look-at="#camera"></a-video>
+      <a-video id="cat" src="#catVideo" width="9" height="9" position="5 6 35" look-at="#camera"></a-video>
+      <a-video id="izzie" src="#izzieVideo" width="9" height="16" position="26 0 -15" look-at="#camera"></a-video>
+      <a-video id="katy" src="#katyVideo" width="9" height="16" position="30 20 15" look-at="#camera"></a-video>
+      <a-video id="lucy" src="#lucyVideo" width="16" height="9" position="15 0 20" look-at="#camera"></a-video>
+      <a-video id="tommy" src="#tommyVideo" width="9" height="16" position="-5 -8 30" look-at="#camera"></a-video>
+      <a-video id="katie" src="#katieVideo" width="9" height="9" position="20 10 20" look-at="#camera"></a-video>
+      <a-video id="eves" src="#evesVideo" width="16" height="9" position="-20 -12 0" look-at="#camera"></a-video>
+
+      <a-video id="emma" src="#emmaVideo" width="9" height="16" position="-22 15 22" look-at="#camera"></a-video>
+      <a-video id="george" src="#georgeVideo" width="16" height="9" position="5 28 30" look-at="#camera"></a-video>
+      <a-video id="kelly" src="#kellyVideo" width="9" height="16" position="30 -2 -6" look-at="#camera"></a-video>
+      <a-video id="kside" src="#ksideVideo" width="9" height="16" position="-30 0 10" look-at="#camera"></a-video>
+      <a-video id="max" src="#maxVideo" width="9" height="16" position="-20 -20 15" look-at="#camera"></a-video>
+      <a-video id="mel" src="#melVideo" width="9" height="16" position="20 28 25" look-at="#camera"></a-video>
+      <a-video id="polly" src="#pollyVideo" width="9" height="16" position="-17 -8 27" look-at="#camera"></a-video>
+      <a-video id="randc" src="#randcVideo" width="16" height="9" position="-5 -18 20" look-at="#camera"></a-video>
+      <a-video id="steph" src="#stephVideo" width="9" height="16" position="25 -15 15" look-at="#camera"></a-video>
 
 
 
 
-    <!-- lou -->
-    <a-video id="lou00" src="#lou00Video" width="9" height="16" position="10 0 -20" look-at="#camera"></a-video>
-    <a-video id="lou02" src="#lou02Video" width="9" height="16" position="10 -15 25" look-at="#camera"></a-video>
-    <a-video id="lou03" src="#lou03Video" width="9" height="16" position="0 -10 30" look-at="#camera"></a-video>
-    <a-video id="lou09" src="#lou09Video" width="16" height="9" position="20 -15 5" look-at="#camera"></a-video>
-    <a-video id="lou10" src="#lou10Video" width="16" height="9" position="-25 15 -5" look-at="#camera"></a-video>
+
+      <!-- lou -->
+      <a-video id="lou00" src="#lou00Video" width="9" height="16" position="10 0 -20" look-at="#camera"></a-video>
+      <a-video id="lou02" src="#lou02Video" width="9" height="16" position="15 -15 25" look-at="#camera"></a-video>
+      <a-video id="lou03" src="#lou03Video" width="9" height="16" position="5 -7 30" look-at="#camera"></a-video>
+      <a-video id="lou09" src="#lou09Video" width="16" height="9" position="25 -15 0" look-at="#camera"></a-video>
+      <a-video id="lou10" src="#lou10Video" width="16" height="9" position="-25 15 -5" look-at="#camera"></a-video>
 
     </a-entity>
 
