--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,9 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="description" content="Happy Birthday Louise! Sorry you're not able to spend your Birthday surrounded by everyone that loves you, but hopfully this is one way to try and bring those people a little closer to you -Let the party commence! 🎉">
-
+    <meta name="description" content="Happy Birthday Louise! Sorry you're not able to spend your Birthday surrounded by everyone that loves you, but hopfully this is one way to try and bring those people a little closer to you.">
     <title>Happy Birthday Louise!</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
