fixed line height issue

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
   <body>
 
   <div id="loadingScreen" class="loading">
-    <section>
+    <main>
       <h1>—</h1>
       <h1>Social distancing?</h1>
       <h1>Not for us!</h1>
@@ -32,7 +32,7 @@
       <h1>Louise!</h1>
       <h2>💃</h2>
       <button id="start-button" class="start-button">Let the celebrations begin → </button>
-    </section>
+    </main>
     <footer>
       <p>Made with ❤️<br>by Jack W. Merrell<br>—<br>25/04/2020</p>
     </footer>
