--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
   <a-scene vr-mode-ui="enabled:false" light="defaultLightsEnabled:false" loading-screen="false" background="color:#FCD8BE">
     <a-assets>
       <video id="jackVideo" preload playsinline src="/images/jack.mp4" type="video/mp4"></video>
-      <video id="louVideo" preload playsinline src="/images/lou.mp4" type="video/mp4"></video>
+      <video id="louVideo" preload playsinline src="/images/lou.mp4" loop type="video/mp4"></video>
       <video id="dickieVideo" preload playsinline src="/images/dickie.mp4" type="video/mp4"></video>
       <video id="rosieVideo" preload playsinline src="/images/rosie.mp4" type="video/mp4"></video>
       <video id="maeveVideo" preload playsinline src="/images/maeve.mp4" type="video/mp4"></video>
